continued work on capstone project

--- a/final_project_game/main_game_app/templates/landing.html
+++ b/final_project_game/main_game_app/templates/landing.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>landing page</h1>
+<div class="container-fluid text text-center">     
+<h1>Welcome</h1>
+<p> battle enemies </p>
+<p> collect gear and grow stronger</p>
+<p> create an account now</p>
+</div>  
 {% endblock %}
