--- a/final_project_game/main_game_app/templates/inventory.html
+++ b/final_project_game/main_game_app/templates/inventory.html
@@ -1,4 +1,24 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>inventory page</h1>
+<h1>inventory page</h1>
+<p>{% for player in players %}
+    {{ player.name }}
+    {% endfor %}
+</p>
+<div class="container-flex" id="backback">
+    <ul>backback
+    {% for item in attack_items %}
+    <li>{{ item.name }} </li>
+    {% endfor %}
+    {% for item in defense_items %}
+    <li>{{ item.name }}</li>
+    {% endfor %}
+    </ul>
+</div>
+
+<div class="container-flex" id="equipped">
+    <ul>equipped items
+
+    </ul>
+</div>
 {% endblock %}
