presentation version of captstone project

--- a/final_project_game/main_game_app/templates/landing.html
+++ b/final_project_game/main_game_app/templates/landing.html
@@ -3,7 +3,7 @@
 <div class="container-fluid text text-center">     
 <h1>Welcome</h1>
 <p> battle enemies </p>
-<p> collect gear and grow stronger</p>
+<p> collect gear</p>
 <p> create an account now</p>
 </div>  
 {% endblock %}
