--- a/final_project_game/main_game_app/templates/base.html
+++ b/final_project_game/main_game_app/templates/base.html
@@ -25,6 +25,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'inventory_page' %}">inventory</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'register' %}">register</a>
+          </li>
         </ul>
       </div>
     </div>
