--- a/final_project_game/main_game_app/templates/inventory.html
+++ b/final_project_game/main_game_app/templates/inventory.html
@@ -1,27 +1,37 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
+
 <h1>inventory page</h1>
 
-<div class="container-flex" id="backback">
+<div  class="d-flex justify-content-center" id="backback">
     <h2>backpack</h2>
+</div>
+<div class="d-flex justify-content-center align-items-center">
     {% for item in items %}
-    <div class="data-model" id="{{ item.id }}">
-        <p>{{ item.name }}</p>
-        <p>{{item.attack}}/{{item.defense}}</p>
-        <!-- <img src="{% static 'stick.png' %}" alt="{{item.name}}" class="image-fluid"> -->
-        <button type="button" class="btnMove btn-primary">equip</button>
+    <div class="card" style="width: 18rem;">
+        <!-- <img src="{{ item.image }}" alt="imagine image here" class="card-img-top"> -->
+        <div class="card-body">
+            <div class="data-model" id="{{ item.id }}">
+                <p>{{ item.name }}</p>
+                <p>{{item.attack}}/{{item.defense}}</p>
+                <button type="button" class="btnMove btn-primary">equip</button>
+            </div>
+        </div>
     </div>
-    {% endfor %}
+        {% endfor %}
+</div>
+
+<div class="d-flex justify-content-center align-items-center">
+    <h3>equipped items</h3>
+    <ul id="equipped_area">
 
     </ul>
 </div>
 
-<div class="container-flex" id="equipped_area">
-    <h3>equipped items</h3>
+<div class="d-flex justify-content-center">
+<button class="btn btn-primary mx-auto" onclick="fight_page()" id="fight_button">fight</button>
 </div>
-<button class="btn btn-primary" onclick="fight_page()" id="fight_button">fight</button>
-
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="{% static 'functionality.js' %}"></script>
 {% endblock %}
